[package]
name = "leptos_async_signal"
authors = ["Demiurg <developers@demiurg.hr>"]
license = "MIT"
repository = "https://github.com/demiurg-dev/leptos_async_signal"
description = "Async signal for leptos Rust web framework."
categories = ["web-programming", "asynchronous"]
keywords = ["web", "reactive", "ssr", "async", "leptos"]
readme = "../README.md"
version = "0.2.1"
rust-version = "1.76"
edition = "2021"

[dependencies]
leptos.workspace = true
tokio = { workspace = true, optional = true }
serde.workspace = true

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "dep:tokio"]