[package]
name = "tests_ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
any_spawner = { version = "0.2", features = ["tokio"] }
expect-test = "1.5"
futures = "0.3"
leptos = { workspace = true, features = ["ssr"] }
leptos_async_signal = { path = "../leptos_async_signal", features = ["ssr"] }
reactive_graph = { version = "0.1" }
tokio.workspace = true